<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ActivityComplete">

    <TextView
            android:id="@+id/textViewWelcomeAndCongrats"
            android:layout_width="0dp"
            android:layout_height="43dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/string_welcome_and_congrats"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/textViewWelcomeAndCongrats" android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp" android:id="@+id/scrollView2"
            android:layout_marginBottom="16dp" app:layout_constraintBottom_toTopOf="@+id/buttonNext">
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:orientation="vertical">

            <TextView
                    android:id="@+id/textViewAnalysisLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/strings_analysis_title"
                    android:textSize="24sp"
                    android:textStyle="italic" />

            <com.jjoe64.graphview.GraphView
                    android:layout_width="match_parent"
                    android:layout_height="200dip"
                    android:id="@+id/graph" android:layout_marginTop="8dp"/>

            <com.jjoe64.graphview.GraphView
                    android:layout_width="match_parent"
                    android:layout_height="200dip"
                    android:id="@+id/graph3" android:layout_marginTop="8dp"/>

            <TextView
                    android:id="@+id/textViewAnalysis"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/string_analysis_data"
                    android:textSize="18sp" />
            <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <TableRow
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent">
                    <TextView
                            android:layout_width="191dp"
                            android:layout_height="wrap_content" android:id="@+id/textViewBlank"
                            android:textSize="18sp"/>
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" android:id="@+id/textViewLevel"
                            android:textSize="18sp" android:textAlignment="center" android:textStyle="bold"/>
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" android:id="@+id/textViewGame"
                            android:textSize="18sp" android:layout_marginStart="8sp" android:textStyle="bold"
                            android:textAlignment="center"/>
                </TableRow>
                <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
                    <TextView
                            android:layout_height="wrap_content" android:id="@+id/textViewTotalProblemsLabel"
                            android:textSize="18sp" android:text="@string/strings_problems"/>

                    <TextView
                            android:id="@+id/textViewProblemsValue"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8sp"
                            android:text="@string/string_problems"
                            android:textAlignment="center"
                            android:textSize="18sp" />

                    <TextView
                            android:id="@+id/textViewProblemViewGame"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8sp"
                            android:textAlignment="center"
                            android:textSize="18sp" />
                </TableRow>
                <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" android:id="@+id/textViewProblemsAttemptedLabel"
                            android:textSize="18sp" android:text="@string/strings_attempted"/>

                    <TextView
                            android:id="@+id/textViewAttemptedValue"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8sp"
                            android:text="@string/sting_attempted"
                            android:textAlignment="center"
                            android:textSize="18sp" />

                    <TextView
                            android:id="@+id/textViewAttemptedValueGame"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8sp"
                            android:textAlignment="center"
                            android:textSize="18sp" />
                </TableRow>
                <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" android:id="@+id/textViewRightLabel"
                            android:textSize="18sp" android:text="@string/strings_correct"/>

                    <TextView
                            android:id="@+id/textViewRightValue"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8sp"
                            android:text="@string/strings_right"
                            android:textAlignment="center"
                            android:textSize="18sp" />

                    <TextView
                            android:id="@+id/textViewRightValueGame"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8sp"
                            android:textAlignment="center"
                            android:textSize="18sp" />
                </TableRow>
                <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                    <TextView
                            android:text="@string/strings_fastest"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" android:id="@+id/textViewFastestLabel"
                            android:textSize="18sp"/>

                    <TextView
                            android:id="@+id/textViewFastestValue"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8sp"
                            android:text="@string/string_fastest"
                            android:textAlignment="center"
                            android:textSize="18sp" />

                    <TextView
                            android:id="@+id/textViewFastestValueGame"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8sp"
                            android:textAlignment="center"
                            android:textSize="18sp" />
                </TableRow>
                <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" android:id="@+id/textViewAverageLabel"
                            android:textSize="18sp" android:text="@string/strings_average"/>

                    <TextView
                            android:id="@+id/textViewAverageValue"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8sp"
                            android:text="@string/string_average"
                            android:textAlignment="center"
                            android:textSize="18sp" />

                    <TextView
                            android:id="@+id/textViewAverageValueGame"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8sp"
                            android:textAlignment="center"
                            android:textSize="18sp" />
                </TableRow>
            </TableLayout>
        </LinearLayout>
    </ScrollView>

    <Button
            android:text="@string/strings_next"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:id="@+id/buttonNext" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp" app:layout_constraintBottom_toBottomOf="parent"/>
    <TextView
            android:text="@string/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewProduct"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toTopOf="@+id/buttonNext"/>
    <TextView
            android:text="@string/app_ver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewVersion"
            app:layout_constraintStart_toStartOf="@+id/textViewProduct"
            app:layout_constraintTop_toBottomOf="@+id/textViewProduct"/>
</android.support.constraint.ConstraintLayout>