<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".BannerActivity">

    <TextView
            android:text="Welcome or Congratulations"
            android:layout_width="0dp"
            android:layout_height="43dp"
            android:id="@+id/textViewWelcomeAndCongrats" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            android:textAlignment="center" android:textSize="30sp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent" android:textStyle="bold"/>
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/textViewWelcomeAndCongrats" android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp" android:id="@+id/scrollView2"
            android:layout_marginBottom="16dp" app:layout_constraintBottom_toTopOf="@+id/buttonClose">
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:orientation="vertical">
            <TextView
                    android:text="Level Rules"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textViewLevelRules" app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textViewWelcomeAndCongrats"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:textSize="24sp" android:textAllCaps="false"
                    android:textStyle="italic"/>
            <TextView
                    android:text="Rules"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textViewRules" app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textViewLevelRules"
                    android:textSize="18sp"/>
        </LinearLayout>
    </ScrollView>
    <Button
            android:text="@string/strings_next"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:id="@+id/buttonClose" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp" app:layout_constraintBottom_toBottomOf="parent"/>
    <TextView
            android:text="@string/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewProduct"
            app:layout_constraintTop_toTopOf="@+id/buttonClose" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"/>
    <TextView
            android:text="@string/app_ver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewVersion" app:layout_constraintStart_toStartOf="@+id/textViewProduct"
            app:layout_constraintTop_toBottomOf="@+id/textViewProduct"
            app:layout_constraintBottom_toBottomOf="@+id/buttonClose"/>
    <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@android:drawable/ic_menu_sort_by_size"
            android:id="@+id/imageButtonSummary"
            app:layout_constraintTop_toTopOf="@+id/buttonClose" app:layout_constraintEnd_toStartOf="@+id/buttonClose"
            android:layout_marginEnd="16dp"/>
</android.support.constraint.ConstraintLayout>