<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity" android:id="@+id/progressBar9">
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textViewArg1"
            android:textSize="36sp"
            android:textAlignment="center"
            app:layout_constraintBaseline_toBaselineOf="@+id/textViewOp" android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toStartOf="@+id/textViewOp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textViewArg2"
            android:textAlignment="center" android:textSize="36sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/textViewOp"
            app:layout_constraintStart_toEndOf="@+id/textViewOp" android:layout_marginStart="16dp"/>
    <TextView
            android:text="@string/strings_op_default"
            android:layout_width="122dp"
            android:layout_height="wrap_content" android:id="@+id/textViewOp"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:textSize="36sp" android:textStyle="bold"
            android:textAlignment="center"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toStartOf="@+id/guideline"/>
    <TextView
            android:text="@string/strings_equals"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textViewEquals"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textViewOp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:textSize="36sp" android:textStyle="bold"
            android:textAlignment="center" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline"/>
    <EditText
            android:layout_width="140dp"
            android:layout_height="51dp"
            android:imeOptions="actionDone"
            android:ems="10"
            android:id="@+id/editTextResult"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textViewEquals" android:inputType="number"
            android:textAlignment="center" android:textStyle="bold"
            android:textSize="30sp" android:singleLine="true" android:selectAllOnFocus="true"
            android:visibility="visible" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toStartOf="@+id/guideline"/>

    <android.support.constraint.Barrier android:layout_width="wrap_content" android:layout_height="wrap_content"
                                        android:id="@+id/barrier" app:barrierDirection="left"/>
    <android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                          android:id="@+id/guideline"
                                          android:orientation="vertical"
                                          app:layout_constraintGuide_percent="0.8"/>
    <View
            android:id="@+id/divider"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="@+id/barrier"
            android:layout_marginEnd="8dp" app:layout_constraintTop_toBottomOf="@+id/editTextResult"
            android:layout_marginTop="8dp"/>
    <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewRight"
            app:layout_constraintBaseline_toBaselineOf="@+id/textViewWrong"
            android:textAlignment="center" android:textColor="@color/colorPrimaryDark" android:textSize="24sp"
            android:textStyle="bold" android:layout_marginStart="16dp" app:layout_constraintStart_toStartOf="parent"/>
    <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewWrong"
            app:layout_constraintTop_toTopOf="@+id/divider"
            android:layout_marginTop="16dp" android:textColor="?attr/colorError"
            android:textSize="24sp" android:textStyle="bold"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toStartOf="@+id/guideline"
            android:textAlignment="center"/>
    <View
            android:id="@+id/divider2"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintTop_toBottomOf="@+id/textViewRight" android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"/>
    <ProgressBar
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="48dp"
            android:layout_height="146dp"
            android:id="@+id/progressBar1"
            tools:style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Large"
            android:progressDrawable="@drawable/vprogressbar"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="@+id/barrier" android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="@+id/guideline"/><![CDATA[
    app:layout_constraintStart_toStartOf="@+id/editTextResult"/>
    ]]>

    <TextView
            android:text="@string/app_ver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewVersion" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewProduct" android:layout_marginStart="16dp"/>

    <TextView
            android:id="@+id/textViewTimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:textSize="24sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/textViewRight"
            app:layout_constraintEnd_toStartOf="@+id/textViewWrong"
            app:layout_constraintStart_toEndOf="@+id/textViewRight" />
    <TextView
            android:text="TextView"
            android:layout_width="48dp"
            android:layout_height="29dp"
            android:id="@+id/textViewLevel"
            android:textSize="24sp"
            android:textAlignment="center"
            app:layout_constraintStart_toStartOf="@+id/progressBar1"
            app:layout_constraintBaseline_toBaselineOf="@+id/editTextResult"
    />
    <TextView
            android:text="@string/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewProduct" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toBottomOf="@+id/divider2" android:layout_marginTop="16dp"/>
    <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@android:drawable/ic_notification_clear_all"
            android:id="@+id/imageButtonClose"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/divider2"/>
</android.support.constraint.ConstraintLayout>